css/styles.css
/*Google font*/
@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');


#intro{
    background:url("/img/backgrounds/h_img.jpg");
    height:100vh;
    background-size: cover;
    color: white;
}

#intro div{
    padding-top: 30vh;
    padding-bottom: 100px;
    margin: auto;
    width:50%;
}

#intro div h1{
    font-size:60px;
}

#services{
    background:url("/img/backgrounds/s_image.jpg");
    height:50vh;
    background-size: cover;
    color: white;

}

#about{
    height:50vh;
}

#contacts{
    height:70vh
}

#contacts div{
    width:80%;
    margin:auto;
}



#contacts{
    background:url("/img/backgrounds/c_image.jpg");
    height:300px;
    background-size: cover;
    color: white;
}

h1,h2,h4,h5,h6,p{
    text-align: center;
    font-family: 'Rubik';
}

.icon{
    display:block;
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
}

.form-input{
    background: none;
    border: solid white 1px;
    color:white;
    
}

::placeholder { 
    color: white;
    opacity: 1;
  }

  .col-md-3 img{
    max-width:100%;
    max-height: 100%;
  }
  
  #social{
      height:30vh;
  }

  #social h4{
    color: black;
  }

  #social div{
      width: fit-content;
      margin: auto;
      padding-top: 5%;
      padding-bottom:5%;
  }


  .hidden{
      display:none;
  }

  section h2{
      padding-bottom:5%;
  }

  .portfolio{
      height: fit-content;
      position: relative;
     
  }
  .overlay{
      padding-top: 40%;
      position: absolute;
      top:25%;
      left:25%; 
      z-index:1;
      width:100%;
      height:100%;
      background: rgba(255, 255, 255, 0.822);
      transform: translate(-25%,-25%);
      font-size: large;
      font-weight: bold;
      display:none;    
  }

  textarea{
      height: 150px;
  }

